--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,7 +5,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jackson Template</title>
+	<title>Sharon Cohen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -79,8 +79,10 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sharon Cohen</strong> Software Engineering student, Second year in Shankar College </p>
-										<p>I am currently part of the Google Developing Student Club.</p>
+										<p><strong>Hi I'm Sharon Cohen</strong> I am 23 years old. I am a second year student and I study software engineering  </p>
+										<p>I have a passion for programming in different languages ​​and platforms.I especially love to program and design complex and challenging systems in c, c ++ and flutter and design
+											 algorithms and database.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -89,24 +91,36 @@
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
 										<h3>Low-lavel</h3>
+										<p>System programming using C</p>
+										<p>Assembly-Mano CPU</p>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
 										<h3>object oriented</h3>
+										<p>System programming using C++</p>
+										<p>Design Patterns</p>
+										<br>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Web</h3>
+										<p>HTML,css,js</p>
+										<p>bootstrap</p>
+										<p>Django</p>
+										<br>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
 										<h3>Flutter</h3>
+										<p>full stack developer</p>
+										<p>db-mySQL ,SQLite, Firebase</p>
+										<br>
 									</div>
 								</div>
 							</div>
@@ -231,7 +245,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Experience</span>
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<h2 class="colorlib-heading animate-box"> Experience</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -245,8 +259,11 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <h2><a href="#">Developer Student Club of Google</a> <span>2019-tody</span></h2>
+					                  <p>Helping students bridge the gap between theory and practice
+										Developer Student Clubs are university based community groups for students interested in Google developer technologies.
+										tudents grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.
+									</p>
 					               </div>
 					            </div>
 					         </article>
@@ -277,7 +294,7 @@
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="#">sharonc49510@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -286,7 +303,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<p>Moshe hadis 5 st., Yehud, Israel </p>
 								</div>
 							</div>
 
@@ -295,7 +312,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<p><a href="tel://">+972 54674083</a></p>
 								</div>
 							</div>
 						</div>
