--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -90,7 +90,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Low-lavel</h3>
+										<h3>Low-level</h3>
 										<p>System programming using C</p>
 										<p>Assembly-Mano CPU</p>
 									</div>
